Fix - [NoJIRA] - content-body spacing css (#874)
* install patched article

* content body styling

--- a/src/app/styles/components/_content-body.scss
+++ b/src/app/styles/components/_content-body.scss
@@ -8,7 +8,7 @@
         width: 88%;
     }
 
-    p {
+    p, &__paragraph {
         padding: 0;
         margin: 20px 0;
     }
